# cryptomirror

./: README.md
Messages/: blobber.h  messages.h  messages.m
NaClWrapper/: README.txt  build.sh  common.h  decrypt.c  encrypt.c  keygen.c  keyimport.c  keystore.c  layout.txt  test.c
NaClWrapper/libs/nacl/include/x86/: crypto_stream_salsa20.h  crypto_stream_salsa2012.h  crypto_stream_salsa208.h
UI/: .gitignore  README.txt
UI/CryptoMirror/: AppDelegate.h  AppDelegate.m  CryptoMirror-Info.plist  CryptoMirror-Prefix.pch  MainMenu.xib  MainMenuWindowController.h  MainMenuWindowController.m  ReadWindow.xib  ReadWindowController.h  ReadWindowController.m  UIElementUtilities.m  b64.h  b64.m  blobber.m  common.h  decrypt.c  encrypt.c  keygen.c  main.m  memory.c  nacl.h
UI/CryptoMirror.xcodeproj/: project.pbxproj
UI/CryptoMirror/en.lproj/: MainMenu.xib
irssi-ghost/: Makefile.in  README.md  aclocal.m4  configure.ac
irssi-ghost/help/: Makefile.am  ghost
irssi-ghost/src/: Makefile.am  cmd.c  cmd.h  ghost.py  message.py  module.c  module.h  nacl.py  pythonbridge.c  pythonbridge.h  utils.c  utils.h
irssi-ghost/src/python/: blobber.py  ghost.py  ghostlib.py
python/: blobber.py  example.py  ghost.py  message.py  nacl.py  prepare.sh
tutorial/: Gmail - CryptoMirror Tutorial.html
tutorial/Gmail - CryptoMirror Tutorial_files/: saved_resource  saved_resource(1)  saved_resource(2)  saved_resource(3)  saved_resource(4)  saved_resource(5)
